--- a/todoblazor/Components/Layout/NavMenu.razor
+++ b/todoblazor/Components/Layout/NavMenu.razor
@@ -6,7 +6,7 @@
 
 <div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">TO DO PRO</a>
+        <a class="navbar-brand" href="">Task Manager</a>
     </div>
 </div>
 
