--- a/todoblazor/Components/Pages/EmployeeManagement.razor
+++ b/todoblazor/Components/Pages/EmployeeManagement.razor
@@ -13,7 +13,7 @@
 }
 else if (!IsAdminLoggedIn)
 {
-    <div class="d-flex justify-content-center flex-column align-items-center">
+    <div class="d-flex justify-content-center flex-column align-items-center" style="width: 100%; height: 100%">
         <p class="text-center">Please log in as admin to access this page.</p>
         <a class="btn btn-primary" href="/login">Login</a>
     </div>
@@ -35,7 +35,7 @@ else
         @foreach (var employee in employees)
         {
             <li class="list-group-item d-flex justify-content-between align-items-center">
-                <span>@employee.Username (ID: @employee.Id)</span>
+                <span>@employee.Username.ToUpper() (ID: @employee.Id)</span>
                 <button class="btn btn-danger btn-sm" @onclick="() => DeleteEmployeeAsync(employee.Id)">Delete</button>
             </li>
         }
